# realharm

./: README.md  pyproject.toml
benchmark/: benchmark_AzureModerator.jsonl  benchmark_Claude37Moderator.jsonl  benchmark_GPT4oModerator.jsonl  benchmark_GeminiModerator.jsonl  benchmark_GraniteGuardModerator.jsonl  benchmark_LLMGuardModerator.jsonl  benchmark_LakeraModerator.jsonl  benchmark_LangchainEvalModerator.jsonl  benchmark_LlamaGuardModerator.jsonl  benchmark_MistralModerator.jsonl  benchmark_OpenAIModerator.jsonl  benchmark_PerspectiveModerator.jsonl  benchmark_ShieldGemmaModerator.jsonl
data/safe/: rh_S00_air_india.yml  rh_S01_amazon.yml  rh_S02_att.yml  rh_S03_bing_chat.yml  rh_S04_bing_chat.yml  rh_S05_bing_chat.yml  rh_S06_bing_chat.yml  rh_S07_bing_chat.yml  rh_S08_bing_chat.yml  rh_S09_chatgpt.yml  rh_S10_chatgpt.yml  rh_S11_chatgpt.yml  rh_S12_chatgpt.yml  rh_S13_chevrolet.yml  rh_S14_chevrolet.yml  rh_S15_chevrolet.yml  rh_S16_delta.yml  rh_S17_dpd.yml  rh_S18_dpd.yml  rh_S19_dpd.yml  rh_S20_google_ai_overview.yml  rh_S21_microsoft_tay.yml  rh_S22_microsoft_tay.yml  rh_S23_paypal.yml  rh_S24_replika.yml  rh_S25_teppo.yml  rh_S26_tessa.yml  rh_S27_uxbear.yml  rh_S28_google_ai_overview.yml  rh_S29_google_ai_overview.yml  rh_S30_google_ai_overview.yml  rh_S31_woebot.yml  rh_S32_wysa.yml  rh_S33_blenderbot.yml  rh_S34_luda.yml  rh_S35_yandex.yml  rh_S36_yandex.yml  rh_S37_yandex.yml  rh_S38_zo.yml  rh_S39_aria.yml  (+28 more)
data/unsafe/: rh_U00_air_india.yml  rh_U01_amazon.yml  rh_U02_att.yml  rh_U09_chatgpt.yml  (+64 more)
scripts/: generate_safe_samples.py  run_benchmark.py
(+22 files in other folders)
